# chiron-desk

./: .env.example  .gitignore  .ignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENT-HANG-ANALYSIS.md  AGENTS.md  BMAD-SUBTREE-GUIDE.md  CHILD-WORKFLOW-DEBUG.md  CHILD-WORKFLOW-FIXES-SUMMARY.md  CHIRON_REPO_HISTORY.md  CLAUDE.md  EPIC-2-READINESS-CHECKLIST.md  FIX-REASONING-AND-HANG.md  FIXES-APPLIED.md  INITIAL-MESSAGE-FIX.md  INITIAL-MESSAGE-VS-INITIAL-PROMPT.md  MASTRA-RESOURCE-FIX.md  PROGRESS_REPORTS.md  README.md  SESSION-HANDOFF-DYNAMIC-TOOLS-SUCCESS.md  SESSION-HANDOFF-FINAL.md  SESSION-HANDOFF-GENERIC-OPTION-CARDS.md  SESSION-HANDOFF-STORY-1-6-FINAL.md  SESSION-HANDOFF-STORY-1-6.md  SESSION-HANDOFF.md  SESSION-SUMMARY-2025-11-05.md  SESSIONS_BY_SPRINT.md  STORY-1-8-TEST-RESULTS.md  biome.json  bmad-questions.md  bts.jsonc  bunfig.toml  debug-child-metadata.ts  lefthook.yml  opencode.json  optimized-v0-prompt.md  package.json  playwright.config.ts  (+7 more)
apps/ai-service/: .gitignore  README.md  package.json  pyproject.toml  test_output.txt
apps/ai-service/app/: __init__.py  config.py  main.py
apps/ai-service/app/routers/: __init__.py  health.py  models.py
apps/ai-service/app/services/: __init__.py  base_provider.py  exceptions.py  openrouter_client.py  provider_factory.py  rate_limiter.py
apps/ai-service/app/utils/: logging.py
apps/ai-service/tests/: __init__.py
apps/ai-service/tests/integration/: test_openrouter_client.py
apps/ai-service/tests/unit/: test_base_provider.py  test_config.py  test_exceptions.py  test_health_router.py  test_logging.py  (+6 more)
(+1673 files in other folders)
